# halo-rs

./: .env  Cargo.toml  README.md  halo.db  halo.db-shm  halo.db-wal
lib/cache/: Cargo.toml
lib/cache/src/: lib.rs
migrations/: 20220906085242_user.sql
src/: config.rs  lib.rs  server.rs
src/cache/: mod.rs
src/http/: error.rs  extractor.rs  mod.rs  types.rs
src/service/: mod.rs  users.rs
